welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:11: error: '}' expected but 'case' found.
	case "X" => recule(); recule(); recule()
        ^BDR2:12: error: '}' expected but 'case' found.
	case "D" => avance(); avance(); avance(); avance()
        ^BDR2:13: error: illegal start of definition
	case "E" => avance(); avance(); avance(); avance(); avance()
        ^BDR2:14: error: illegal start of definition
	case "F" => avance(); avance(); avance(); avance(); avance(); avance()
        ^BDR2:15: error: illegal start of definition
	case "W" => recule(); recule(); recule(); recule()
        ^BDR2:16: error: illegal start of definition
	case "V" => recule(); recule(); recule(); recule(); recule()
        ^BDR2:17: error: illegal start of definition
	case "U" => recule(); recule(); recule(); recule(); recule(); recule()
        ^BDR2:18: error: illegal start of definition
	case _ => fini = true
        ^BDR2:20: error: eof expected but '}' found.
} 
^